# Seedyfiuba_Back_Notifications

./: .env.example  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  main.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
heroku/: heroku-entrypoint.sh
heroku/datadog-config/: datadog.yaml
src/: main.py
src/api/dependencies/: database.py
src/api/errors/: ApiError.py  handlers.py  messages.py
src/api/routes/: common.py  index.py  notifications.py  status.py  subscriptions.py  users.py
src/core/: config.py
src/database/: config.py  crud.py  models.py  start.py
src/schemas/: notification.py  search.py  suscription.py  user.py
src/services/: notification.py
src/utils/: log.py
tests/: test_notifications.py
