[tool.poetry]
name = "notifications"
version = "0.1.0"
description = ""
authors = ["JulianVentura <julianv6004@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.66.0"
uvicorn = "^0.14.0"
SQLAlchemy = "^1.4.20"
psycopg2-binary = "^2.9.1"
firebase-admin = "^5.0.1"
exponent-server-sdk = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
